--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@fortawesome/fontawesome-free": "5.10.2",
         "bootstrap": "4.3.1",
         "devicon": "^2.2.0",
+        "font-awesome": "^4.7.0",
         "jquery": "3.4.1",
         "jquery.easing": "^1.4.1",
         "magnific-popup": "^1.1.0"
